# sdk-ruby

./: .gitignore  .gitlab-ci.yml  .rubocop.yml  Gemfile  LICENSE  README.md  README.rst  Rakefile  pyproject.toml  run-ci.py  tanker-core.gemspec  tbump.toml
lib/: tanker-core.rb
lib/tanker/: admin.rb  c_tanker.rb  core.rb  encryption_options.rb  error.rb  sharing_options.rb  verification_options.rb
lib/tanker/admin/: app.rb  c_admin.rb  client.rb
lib/tanker/admin/c_admin/: c_app_descriptor.rb  c_app_update_options.rb
lib/tanker/c_tanker/: c_backends.rb  c_datastore.rb  c_device_info.rb  c_event.rb  c_future.rb  c_http.rb  c_lib.rb  c_log_record.rb  c_string.rb  c_tanker_error.rb  c_verification.rb  c_verification_method.rb  fork_hook.rb  init.rb
lib/tanker/core/: attach_result.rb  encryption.rb  encryption_session.rb  group.rb  http.rb  init.rb  log_record.rb  options.rb  session.rb  status.rb  stream.rb  verification.rb  verification_method.rb  version.rb
spec/: admin.rb  admin_helper.rb  core_spec.rb  encryption_session_spec.rb  group_spec.rb  spec_helper.rb  stream_spec.rb  verification_spec.rb
spec/admin/: app.rb  app_update_options.rb  client.rb
