[tool.poetry]
name = "tanker-ruby-sdk"
version = "0.1.0"
description = "Ruby client for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
ci = "2020.6.2551"


[[tool.poetry.source]]
name = "tanker.local"
url = "http://tanker.local:8181"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
