[tool.poetry]
name = "tanker-ruby-sdk"
version = "0.1.0"
description = "Ruby client for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = "2020.12.dev3122"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"


[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b0"
flake8 = "^3.8.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
